# webhooks-enforcer

./: .env.example  Cargo.toml  Dockerfile  README.md
.deploy/: webhooks-enforcer.yaml
.deploy/webhooks-enforcer/: cronjob.yaml  jobtemplate.yaml  secrets.yaml
.github/workflows/: docker-publish.yaml
src/: main.rs
