[package]
name = "webhooks-enforcer"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
url = "2.4"
clap = { version = "4.4", features = ["derive"] }
